<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DevStore_Eyes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="radius_title">请设置围栏半径(0~500米)</string>
	<string name="search_hint">请输要绑定的百度用户名</string>
	<string name="set_geofence">我要给他/她设置电子围栏</string>
	<string name="waite_for_geofence">等待设置电子围栏</string>
	<string name="waiting">正在等待对方的请求，请稍后...</string>
	<string name="req_bind_msg">%1$s请求和你绑定</string>
	<string name="login">登录</string>
	<string name="no_user">该用户还未注册DevstoreEye</string>
	<string name="had_bind">%1$s已经和别人绑定啦</string>
	<string name="confirm_bind">确定要和%1$s绑定吗？</string>
	<string name="current_bind_user">当前绑定用户：%1$s</string>
	<string name="geofence_center">围栏中心：%1$s</string>
	<string name="current_radius">围栏半径：%1$s</string>
	<string name="current_distance">%1$s当前距离围栏中心%2$s米</string>
	<string name="geofence_hint">因定位服务存在误差，当前距离只做参考。</string>
	<string name="bind_hint">请输入对方的百度用户名进行绑定</string>
	<string name="modify_geofence">修改围栏</string>
	<string name="searching">正在查询...</string>
	<string name="locating">正在定位...</string>
	<string name="ta_agree_bind">%1$s同意和您绑定</string>
	<string name="bind_failed">绑定失败</string>
	<string name="success_bind">成功和%1$s绑定</string>
	<string name="wait_for_geofence">对方正在设置围栏，请稍后...</string>
	<string name="set_geofence_success">给对方设置电子围栏成功</string>
	<string name="share">分享</string>
	<string name="share_success">分享成功</string>
	<string name="bind_set_hint">主动发送绑定请求的一方将获得设置电子围栏的权利</string>
</resources>
